@@ -7,8 +7,16 @@ env:
   - BUILD_ARGS=""
   # Build using OpenSSL Libary for MD5/SHA1 hash functions
   - BUILD_ARGS="--with-openssl"
+  # Build with gcov code coverage
+  - BUILD_ARGS="--enable-gcov"
+# gcov code coverage only works with gcc, so don't use it with clang.
+matrix:
+  exclude:
+    - compiler: clang
+      env: BUILD_ARGS="--enable-gcov"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install automake1.9
 script: 
   - autoreconf --install && ./configure $BUILD_ARGS && make && make check
+after_success: if [ $BUILD_ARGS == "--enable-gcov" ]; then coveralls --exclude lib --exclude tests; fi
